templates/traffic/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kpw-app
  namespace: kpw-app-site
spec:
  type: ClusterIP 
  selector:
    app: kpw-app
  ports:
    - port: 80
      targetPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: s3-proxy
  namespace: kpw-app-site
spec:
  selector:
    app: s3-proxy
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: kpw-mongo
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
      name: mongo
  clusterIP: None
  selector:
    app: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-exporter
  namespace: kpw-monitoring
  labels:
    app: mongodb-exporter
spec:
  ports:
    - port: 9216
      name: metrics
  selector:
    app: mongodb-exporter

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: kpw-monitoring
spec:
  type: NodePort
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: prometheus

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: kpw-monitoring
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: grafana
