templates/traffic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kpw-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-kpw
spec:
  ingressClassName: nginx

  tls:
  - secretName: kpw-tls


  rules:
  - http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: kpw-app
            port:
              number: 80
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: s3-proxy
            port:
              number: 80
